@@ -27,6 +27,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7292) Fix site statistics when moving pages in/out of content namespaces
 * (bug 6937) Introduce "statistics-footer" message, appended to Special:Statistics
 * (bug 8531) Correct local name of Lingála (patch by Raymond)
+* (bug 6638) List block flags in block log entries
 
 == Languages updated ==
 
